--- a/.eslintrc
+++ b/.eslintrc
@@ -1,6 +1,8 @@
 {
-    "extends": "react-app",
-    "rules": {
-        "semi": ["error", "never"]
-    }
+  "extends": "react-app",
+  "rules": {
+    "semi": ["error", "never"],
+    "indent": ["error", 2, { "SwitchCase": 1 }],
+    "quotes": ["error", "single", { "avoidEscape": true }]
+  }
 }
