--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
     "bloomer": "^0.6.3",
     "bulma": "^0.6.2",
     "font-awesome": "^4.7.0",
+    "history": "^4.7.2",
     "prop-types": "^15.6.1",
     "react": "^16.3.0",
     "react-dom": "^16.3.0",
     "react-redux": "^5.0.7",
+    "react-router": "^4.2.0",
+    "react-router-dom": "^4.2.2",
+    "react-router-redux": "^5.0.0-alpha.9",
     "react-scripts": "1.1.1",
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
