--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "bulma": "^0.6.2",
     "font-awesome": "^4.7.0",
     "history": "^4.7.2",
+    "moment": "^2.22.0",
     "prop-types": "^15.6.1",
     "react": "^16.3.0",
     "react-dom": "^16.3.0",
