--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "moment": "^2.22.0",
     "prop-types": "^15.6.1",
     "react": "^16.3.0",
+    "react-autosuggest": "^9.3.4",
     "react-dom": "^16.3.0",
     "react-redux": "^5.0.7",
     "react-router": "^4.2.0",
